appId: com.aljj.testingapp
name: Minor - increment counter
tags:
  - e2e
  - minor
---
- launchApp

# Preconditions
- assertVisible: '10'
- assertVisible: 'Press me'

# Steps
- tapOn: 'Press me'

# Expected outcomes
- assertVisible: '11'